--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
     "animate.css": "^4.1.1",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "5.2.0-beta1",
     "bootstrap-icons": "^1.8.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
