--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "5.2.0-beta1",
     "bootstrap-icons": "^1.8.3",
+    "query-string": "^7.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
