--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@commitlint/cli": "^17.0.1",
     "@commitlint/config-conventional": "^17.0.0",
     "@faker-js/faker": "^7.1.0",
+    "@types/webpack-env": "^1.17.0",
     "eslint": "^8.12.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
